2017/08/29
	Fix the char saved varables can't be generated if the toc don't hav

2017/03/05
	Fix __AddonSecureHook__ not works as demand. NEString is removed to PLoop.

	If the slash command's handler return false, it's helper message would be printed. Like :

		__SlashCmd__ "test" "lock" "on/off - Lock the action"
		function LockAction(info)
			if info ~= "on" and info ~= "off" then return false end
		end

		-- Use /test lock 111, helper message would be printed as
		--======================--
		/test lock on/off - Lock the action
		--======================--

	Also you can do it by yourselves, just don't return the false value

2017/02/16
	Fix the OnLoad and OnEnable won't fire for sub-addons with like 'MainAddonName_SubAddon' 'MainAddonName.SubAddon'.

2017/01/14
	Fix the OnLoad won't fire for the child-modules.
	Default slash command handler added, see the introduction for more informations.

2016/12/29
	The NoCombat(func, ...) also would call the func in a thread now.
	Fix the ScorpioManager's ADDON_LOADED

2016/12/28
	Fix the weak table cause thread task be collected.

2016/12/27
	Re-design the localization system.

2016/12/22
	Init the alpha version, no-ui part finished.